Moved Mypy to dev deps

--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,10 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+mypy = "==0.650"
 
 [packages]
-mypy = "==0.650"
+mypy = "*"
 
 [requires]
 python_version = "3.7"
